--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,23 +3,35 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk 30
 
     defaultConfig {
         applicationId "com.example.gh"
         minSdk 22
-        targetSdk 31
+        targetSdk 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        ndk {
+            abiFilters 'armeabi-v7a', 'x86', 'arm64-v8a', 'x86_64', 'armeabi'
+        }
+    }
+
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+            res.srcDirs += 'advertisement_res'
+        }
+
     }
 
     signingConfigs {
         release {
             keyAlias 'key0'
             keyPassword '123123'
-            storeFile file('/Users/zkh/AndroidStudioProjects/GH/key/Untitled') //签名文件的位置
+            storeFile file('C:/code/bxgh_android/GH/key/Untitled') //签名文件的位置
             storePassword '123123'
         }
     }
@@ -40,7 +52,7 @@ android {
 }
 
 dependencies {
-
+    implementation fileTree(include: ['*.jar', '*.aar'], dir: 'advertisement_libs')
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -48,9 +60,10 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
+
+    implementation 'androidx.browser:browser:1.0.0'
 
     implementation 'com.youzanyun.open.mobile:x5sdk:7.1.30'
 
