--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         maven { url 'https://maven.aliyun.com/repository/google'}
         maven { url 'https://maven.aliyun.com/repository/gradle-plugin'}
         maven { url 'https://maven.aliyun.com/repository/public'}
+        maven { url 'https://repo1.maven.org/maven2/' }
         google()
         mavenCentral()
     }
@@ -14,7 +15,10 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
 }
+
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
