--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -6,3 +6,4 @@ zipStorePath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 android.enableJetifier=true
 android.useAndroidX=true
+MobSDK.spEdition=FP
