--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,14 @@ buildscript {
         maven { url 'https://maven.aliyun.com/repository/gradle-plugin'}
         maven { url 'https://maven.aliyun.com/repository/public'}
         maven { url 'https://repo1.maven.org/maven2/' }
+        maven {
+            url 'https://mvn.mob.com/android'
+        }
         google()
         mavenCentral()
     }
     dependencies {
+        classpath "com.mob.sdk:MobSDK:+"
         classpath "com.android.tools.build:gradle:7.0.4"
 
         // NOTE: Do not place your application dependencies here; they belong
