--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,16 @@
 plugins {
     id 'com.android.application'
 }
-
 apply from: '../MobSDK.gradle'
 
 android {
-    compileSdk 30
+    compileSdkVersion 30
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.yunlu.bxgh"
-        minSdk 23
-        targetSdk 30
+        minSdkVersion 23
+        targetSdkVersion 30
         versionCode 4
         versionName "1.6.17"
 
@@ -18,7 +18,8 @@ android {
 
         ndk {
             abiFilters 'armeabi-v7a', 'x86', 'arm64-v8a', 'x86_64', 'armeabi'
-        }    }
+        }
+    }
 
     sourceSets {
         main {
@@ -31,16 +32,18 @@ android {
         release {
             keyAlias 'key0'
             keyPassword '123123'
-            storeFile file('D:\\code_new\\bxgh_android\\GH\\key\\Untitled') //签名文件的位置
+            storeFile file('../key/Untitled') //签名文件的位置
             storePassword '123123'
         }
     }
+
 
     buildTypes {
         release {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
         debug {
             signingConfig signingConfigs.release
@@ -52,33 +55,10 @@ android {
     }
 }
 
-MobSDK {
-    appKey "35610dd563b1f"
-    appSecret "e6fe5164b34a1b9c9a98bd5138181e08"
-    ShareSDK {
-        loopShare true
-        devInfo {
-            Wechat {
-                appId "wxcf44b583c7d026d6"
-                appSecret "e6fe5164b34a1b9c9a98bd5138181e08"
-            }
-            WechatFavorite {
-                appId "wxcf44b583c7d026d6"
-                appSecret "e6fe5164b34a1b9c9a98bd5138181e08"
-            }
-            WechatMoments {
-                appId "wxcf44b583c7d026d6"
-                appSecret "e6fe5164b34a1b9c9a98bd5138181e08"
-            }
-        }
-    }
-}
-
-
 dependencies {
     implementation fileTree(include: ['*.jar', '*.aar'], dir: 'advertisement_libs')
-    implementation  'com.umeng.umsdk:common:9.4.7'// 必选
-    implementation  'com.umeng.umsdk:asms:1.4.0'// 必选
+    implementation 'com.umeng.umsdk:common:9.4.7'// 必选
+    implementation 'com.umeng.umsdk:asms:1.4.0'// 必选
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
