--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,54 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
-        maven { url 'https://maven.aliyun.com/repository/jcenter' }
-        maven { url 'https://maven.aliyun.com/repository/google'}
-        maven { url 'https://maven.aliyun.com/repository/gradle-plugin'}
-        maven { url 'https://maven.aliyun.com/repository/public'}
-        maven { url 'https://repo1.maven.org/maven2/' }
-        maven {
-            url 'https://mvn.mob.com/android'
-        }
-        google()
+        maven { url = "http://maven.aliyun.com/nexus/content/groups/public/" }
         mavenCentral()
+        google()
+        jcenter()
+        //华为
+        maven { url 'http://developer.huawei.com/repo/' }
+        maven { url 'https://developer.huawei.com/repo/' }
+        //友盟
+        maven { url 'https://repo1.maven.org/maven2/' }
+        maven { url "https://mvn.mob.com/android" }
+        maven {
+            allowInsecureProtocol = true
+            url 'http://maven.youzanyun.com/repository/maven-releases'
+        }
     }
+
     dependencies {
+        classpath "com.android.tools.build:gradle:4.1.3"
+        // 注册MobSDK 分享
         classpath "com.mob.sdk:MobSDK:+"
-        classpath "com.android.tools.build:gradle:7.0.4"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.1'
+        //华为
+        classpath 'com.huawei.agconnect:agcp:1.5.2.300'
     }
-
 }
 
-
+allprojects {
+    repositories {
+        mavenCentral()
+        maven { url = "http://maven.aliyun.com/nexus/content/groups/public/" }
+        maven { url "https://jitpack.io" }//这就是添加的
+        google()
+        jcenter()
+        // 支付宝 SDK AAR 包所需的配置
+        flatDir {
+            dirs 'libs'
+        }
+        //友盟
+        maven { url 'https://repo1.maven.org/maven2/' }
+        //华为
+        maven { url 'https://developer.huawei.com/repo/' }
+        maven {
+            allowInsecureProtocol = true
+            url 'http://maven.youzanyun.com/repository/maven-releases'
+        }
+    }
+}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
